# Lgl

./: .gitignore  .gitmodules  CMakeLists.txt  Readme.md
Lgl/Headers/: hello.h  lgl.h
Lgl/Shaders/: main.frag  main.vert
Lgl/src/: IndexBuffer.cpp  IndexBuffer.h  IntexBuffer.h  Texture2D.cpp  Texture2D.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.h  assert.h  glError.cpp  glError.h  lgl.h  main.cpp  shader.cpp  shader.h  test.cpp  test.txt
Lgl/src/Shaders/: main.frag  main.vert
